@@ -18,6 +18,9 @@
 #
 #
 # $Log$
+# Revision 1.23  2005/01/05 12:12:30  jimmyo
+# Main: Added limit message option "strtrunc"
+#
 # Revision 1.22  2004/12/08 08:47:44  jimmyo
 # Fix bug where munin-limits didn't warn properly in all situations.
 #
@@ -113,7 +116,7 @@ my %notes = ();
 my $stdout = 0;
 my $force = 0;
 my %default_text = ( "default" => '${var:group} :: ${var:host} :: ${var:graph_title}${if:cfields \n\tCRITICALs:${loop<,>:cfields  ${var:label} is ${var:value} (outside range [${var:crange}])${if:extinfo : ${var:extinfo}}}.}${if:wfields \n\tWARNINGs:${loop<,>:wfields  ${var:label} is ${var:value} (outside range [${var:wrange}])${if:extinfo : ${var:extinfo}}}.}${if:ufields \n\tUNKNOWNs:${loop<,>:ufields  ${var:label} is ${var:value}${if:extinfo : ${var:extinfo}}}.}${if:fofields \n\tOKs:${loop<,>:fofields  ${var:label} is ${var:value}${if:extinfo : ${var:extinfo}}}.}\n',
-    		     "nagios"  => '${var:host}\t${var:graph_title}\t${var:worstid}\t${if:cfields CRITICALs:${loop<,>:cfields  ${var:label} is ${var:value} (outside range [${var:crange}])${if:extinfo : ${var:extinfo}}}.}${if:wfields WARNINGs:${loop<,>:wfields  ${var:label} is ${var:value} (outside range [${var:wrange}])${if:extinfo : ${var:extinfo}}}.}${if:ufields UNKNOWNs:${loop<,>:ufields  ${var:label} is ${var:value}${if:extinfo : ${var:extinfo}}}.}${if:fofields OKs:${loop<,>:fofields  ${var:label} is ${var:value}${if:extinfo : ${var:extinfo}}}.}',
+    		     "nagios"  => '${var:host}\t${var:graph_title}\t${var:worstid}\t${strtrunc:350 ${if:cfields CRITICALs:${loop<,>:cfields  ${var:label} is ${var:value} (outside range [${var:crange}])${if:extinfo : ${var:extinfo}}}.}${if:wfields WARNINGs:${loop<,>:wfields  ${var:label} is ${var:value} (outside range [${var:wrange}])${if:extinfo : ${var:extinfo}}}.}${if:ufields UNKNOWNs:${loop<,>:ufields  ${var:label} is ${var:value}${if:extinfo : ${var:extinfo}}}.}${if:fofields OKs:${loop<,>:fofields  ${var:label} is ${var:value}${if:extinfo : ${var:extinfo}}}.}}',
     		     "old-nagios"  => '${var:host}\t${var:plugin}\t${var:worstid}\t${var:graph_title}:${if:cfields CRITICALs:${loop<,>:cfields  ${var:label} is ${var:value} (outside range [${var:crange}])${if:extinfo : ${var:extinfo}}}.}${if:wfields WARNINGs:${loop<,>:wfields  ${var:label} is ${var:value} (outside range [${var:wrange}])${if:extinfo : ${var:extinfo}}}.}${if:ufields UNKNOWNs:${loop<,>:ufields  ${var:label} is ${var:value}${if:extinfo : ${var:extinfo}}}.}${if:fofields OKs:${loop<,>:fofields  ${var:label} is ${var:value}${if:extinfo : ${var:extinfo}}}.}'
 		    );
 
@@ -505,6 +508,12 @@ sub message_expand {
 	    } 
 	    $a[0] = $res;
 	}
+	elsif ($a[0] =~ /^\{strtrunc:\s*(\S+)\s(.+)\}$/)
+	{
+	    my $f = "%.".$1."s";
+	    my $t = $2;
+	    $a[0] = sprintf ($f, message_expand ($t, $client, $prefix));
+	}
 	elsif ($a[0] =~ /^\{if:\s*(\!)?(\S+)\s(.+)\}$/)
 	{
 	    my $n = $1;
@@ -537,6 +546,12 @@ sub logger_open {
 	  unless (open ($log, ">>$dirname/munin-limits.log"))
 	  {
 		  print STDERR "Warning: Could not open log file \"$dirname/munin-limits.log\" for writing: $!";
+	  }
+	  else
+	  {
+		  close (STDERR);
+		  *STDERR = \$log;
+		
 	  }
     }
 }
