@@ -3,6 +3,7 @@ munin (work)
   * Main: Allow dots in PNG paths (patch by Jacques Caruso).
   * Main: Properly size table below graphs in service-view.
   * Main: Fix bug which lead to some graphs failing with STACK error.
+  * Main: Added limit message option "strtrunc".
   * Plugins: generic/sendmail_mail{stats,traffic} updated.
   * Plugins: Made generic/samba more portable.
 
